プロトタイプCGI動作
git-svn-id: file:///Users/kunishi/tmp/svnroot/exec_description/trunk@10 061e66b1-c42d-4761-b57f-ae7786663e95

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="ja"><head>
-<meta content="text/html; charset=Shift_JIS" http-equiv="content-type"><title>X-TDL Viewer</title></head>
+<meta content="text/html; charset=utf-8" http-equiv="content-type"><title>X-TDL Viewer</title></head>
 <body>
 <h2>X-TDL Viewer <small>Ver. 0.2</small></h2>
 教材リソースリポジトリに登録してある、X-TDLリソースの閲覧ができます。作成した教材の確認に利用して下さい。<br>
@@ -12,7 +12,7 @@
 教材リソースリポジトリは<a href="http://adel.c.oka-pu.ac.jp:8080/exist/index.xml" target="_blank">こちら</a>です。(ログインID：admin　パス：無し)<br>
 <br>
 <div style="border: 3px inset midnightblue; padding: 10px; position: relative; left: 30px; width: 500px; background-color: GhostWhite;">
-<form action="exec-read-u.cgi" method="get"><label style="font-weight: bold;">作
+<form action="./exec-read-u.cgi" method="get"><label style="font-weight: bold;">作
 業フォルダ:</label>&nbsp;&nbsp;&nbsp; <input size="30" name="dir"><br>
 <br>
 <label style="font-weight: bold;">ファイル名:</label>
