--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="ja"><head>
-<meta content="text/html; charset=utf-8" http-equiv="content-type"><title>X-TDL Viewer</title></head>
+		<meta content="text/html; charset=utf-8" http-equiv="content-type"><title>Exercise-Viewer</title></head>
 <body>
-<h2>X-TDL Viewer <small>Ver. 0.2</small></h2>
-教材リソースリポジトリに登録してある、X-TDLリソースの閲覧ができます。作成した教材の確認に利用して下さい。<br>
-エラー処理とかあまり真面目にやってません。やさしく使ってね。<br>
+	<h2>Exercise-Viewer <small>Ver. 0.1</small></h2>
+	演習記述の閲覧ができます。作成した教材の確認に利用して下さい。<br>
+	エラー処理とかあまり真面目にやってません。<br>
 <br>
-ノードIDを指定すると、指定したノード(構造記述要素 or 意味記述要素)以下の部分木が提示されます。<br>
+<!--ノードIDを指定すると、指定したノード(構造記述要素 or 意味記述要素)以下の部分木が提示されます。<br>
 入力しなければ、ルート要素以下を全て提示します。<br>
-<br>
+<br>-->
 教材リソースリポジトリは<a href="http://adel.c.oka-pu.ac.jp:8080/exist/index.xml" target="_blank">こちら</a>です。(ログインID：admin　パス：無し)<br>
 <br>
 <div style="border: 3px inset midnightblue; padding: 10px; position: relative; left: 30px; width: 500px; background-color: GhostWhite;">
